--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -27,6 +27,18 @@ nav {
     font-family: Arial, Helvetica, sans-serif
 }
 
+main {
+    background: #cccccc;
+    color: #575757;
+    grid-column: 1/2;
+}
+
+aside {
+    background: #ffffff;
+    color: #575757;
+    grid-column: 2/3;
+}
+
 footer {
     background: #333333;
     color: #e7e7e7;
@@ -43,16 +55,4 @@ p {
     display: flex;
     justify-content: space-evenly;
     align-items: flex-end;
-}
-
-.left-sidebar {
-    background: #cccccc;
-    color: #575757;
-    grid-column: 1/2;
-}
-
-.right-sidebar {
-    background: #ffffff;
-    color: #575757;
-    grid-column: 2/3;
 }
