--- a/styles/base.css
+++ b/styles/base.css
@@ -11,7 +11,7 @@ p {
 }
 
 body {
-    width: 960px;
+    max-width: 960px;
     height: auto;
     display: grid;
     grid-template: 1fr 4fr .5fr / auto 1fr auto;
