--- a/week02/styles/media-query.css
+++ b/week02/styles/media-query.css
@@ -5,7 +5,7 @@ body {
 header,
 main,
 footer {
-    max-width: 640;
+    max-width: 640px;
     margin: 1rem auto;
     border: 1px solid rgba(0, 0, 0, 0.5);
     padding: .5rem;
