--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -11,6 +11,7 @@
 
     nav {
         flex-direction: row;
+        font-size: 1.2em;
     }
 
     nav a {
@@ -23,5 +24,10 @@
         margin: 0;
         padding-left: 1em;
         font-family: "Lora", Georgia, 'Times New Roman', serif;
+        font-size: 2em;
+    }
+
+    h2 {
+        font-size: 1.5em;
     }
 }
