--- a/styles/temples.css
+++ b/styles/temples.css
@@ -30,6 +30,10 @@ footer {
     padding: 1em;
 }
 
+footer p {
+    padding: .25em;
+}
+
 header,
 footer {
     align-items: center;
@@ -43,6 +47,7 @@ nav {
     max-width: 100%;
     flex-direction: column;
     justify-content: space-evenly;
+    font-size: 1.5em;
 }
 
 nav a {
@@ -68,11 +73,13 @@ img {
 h1 {
     margin: 0;
     font-family: "Lora", Georgia, 'Times New Roman', serif;
+    font-size: 3em;
 }
 
 h2 {
     margin: 0;
     font-family: "Lora", Georgia, 'Times New Roman', serif;
+    font-size: 2em;
 }
 
 figure {
@@ -90,7 +97,7 @@ figcaption {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     align-items: center;
-    margin-top: 1.25em;
+    margin-top: 2em;
     gap: 1em;
 }
 
