--- a/styles/temples.css
+++ b/styles/temples.css
@@ -73,13 +73,13 @@ img {
 h1 {
     margin: 0;
     font-family: "Lora", Georgia, 'Times New Roman', serif;
-    font-size: 3em;
+    font-size: 2.25em;
 }
 
 h2 {
     margin: 0;
     font-family: "Lora", Georgia, 'Times New Roman', serif;
-    font-size: 2em;
+    font-size: 1.75em;
 }
 
 figure {
@@ -117,8 +117,8 @@ figcaption {
     border: 0;
     background: none;
     position: absolute;
-    right: 1em;
-    top: 1em;
+    right: .75em;
+    top: 1.25em;
     cursor: pointer;
 }
 
