--- a/styles/place.css
+++ b/styles/place.css
@@ -1,3 +1,9 @@
+:root {
+    --primary-color: #C8102E;
+    --secondary-color: #FFCD00;
+    --font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+
 * {
     margin: 0;
 }
@@ -5,9 +11,9 @@
 body {
     display: grid;
     grid-template: auto 1fr auto / 1fr auto 1fr;
-    background-color: #C8102E;
+    background-color: var(--primary-color);
     color: #000;
-    font-family: "Roboto", Arial, Helvetica, sans-serif;
+    font-family: var(--font-family);
     font-size: 1.25rem;
 }
 
@@ -18,7 +24,7 @@ header {
     align-items: center;
     padding: 2rem;
     color: #FFFFFF;
-    border-bottom: solid 2rem #FFCD00;
+    border-bottom: solid 2rem var(--secondary-color);
 }
 
 main {
@@ -72,7 +78,7 @@ dd::before {
 }
 
 .hero {
-    background-color: #FFCD00;
+    background-color: var(--secondary-color);
 }
 
 .hero img {
