--- a/styles/form-mobile.css
+++ b/styles/form-mobile.css
@@ -81,8 +81,9 @@ input[type="submit"] {
     font-size: 1rem;
 }
 
-input[type="checkbox"] {
-    transform: scale(1.25);
+input[type="checkbox"],
+input[type="radio"] {
+    transform: scale(1.125);
 }
 
 label[for="product"]::before {
